Correggo il titolo

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -19,7 +19,7 @@ Emacs per LaTeX]
 
 \frontmatter*
 
-\title{Guida pratica all'uso\\ di\\ GNU Emacs \& AUCTeX}
+\title{Guida pratica all'uso\\ di\\ GNU Emacs \& AUC\TeX}
 \author{Mosè Giordano, Orlando Iovino, Matteo Leccardi}
 \GetFileInfo{guidaemacsauctex.tex}
 \date{\filename\ \fileversion\ del \filedate}
