Modifico data e comando \emacs

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -85,7 +85,8 @@
   urlcolor   = {blue},
 }
 
-\providecommand{\emacs}{Emacs}
+% \progstyle dentro \emacs non funziona :-(
+\providecommand{\emacs}{\textsf{Emacs}}
 \providecommand{\auctex}{AUC\TeX{}}
 
 % end of file guidaemacsauctex.sty
