README.org Modifico la parte finale perché non viene reso il codice di guidatematica.el

--- a/README.org
+++ b/README.org
@@ -53,5 +53,5 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it.
 Questa guida tematica è stata composta con la classe [[https://github.com/GuITeX/guidatematica][guidatematica]] del [[http://www.guitex.org/home/][GuIT —
 Gruppo Utilizzatori Italiani di TeX]].
 
-Al deposito [[https://github.com/orlyfurious/auctex_style_guidatematica][auctex_style_guidatematica]] è disponibile il file di stile *non
-ufficiale* =guidatematica.el= per [[http://www.gnu.org/software/auctex/][AUCTeX]].
+Al deposito [[https://github.com/orlyfurious/auctex_style_guidatematica][auctex_style_guidatematica]] è disponibile il file di stile non
+ufficiale =guidatematica.el= per [[http://www.gnu.org/software/auctex/][AUCTeX]].
